@@ -1,0 +1,7 @@
+t_hashtable8.o
+t_hashtable_c.o
+../hashtable.a
+../error.a
+../bin.a
+../str.a
+../alloc.a
