@@ -232,3 +232,4 @@
 20070324 code: scan_float() and scan_double() now accept scientific
                notation.
 20070324 code: improved scan_fspec tests.
+20070324 code: fixed double free() in ht_clear()
